output/socketgateway_p5_25_124/foundry_validation/F-002_Optimism_and_Arbitrum_routes_trust_attac/forge_stdout_attempt5.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:82:51:
   |
82 |     address private constant UNISWAP_V2_FACTORY = 0x5C69bEe701ef814A2B6a3EDD4B1652CB9cc5aA6f;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xd632f22692FaC7611d2AA1C0D552930D43CAEd3B". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xd632f22692FaC7611d2AA1C0D552930D43CAEd3B". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:560:22:
    |
560 |         tokens[75] = 0xd632f22692fac7611d2aa1c0d552930d43caed3b; // FRAX3CRV
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5c6Ee304399DBdB9C8Ef030aB642B10820DB8F56". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5c6Ee304399DBdB9C8Ef030aB642B10820DB8F56". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:563:22:
    |
563 |         tokens[78] = 0x5c6Ee304399dBDB9C8Ef030aB642B10820DB8F56; // 80BAL20WETH
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:565:22:
    |
565 |         tokens[80] = 0xC0c293ce456ff0ed870add98a0828dd4d2903dbf; // AURA
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xef3A930e1FfFFAcd2fc13434aC81bD278B0ecC8d". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xef3A930e1FfFFAcd2fc13434aC81bD278B0ecC8d". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:566:22:
    |
566 |         tokens[81] = 0xEF3a930e1ffffacd2fc13434ac81bd278b0ecc8d; // FIS
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x4F9254C83EB525f9FCf346490bbb3ed28a81C667". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x4F9254C83EB525f9FCf346490bbb3ed28a81C667". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:568:22:
    |
568 |         tokens[83] = 0x4f9254C83Eb525f9FcF346490bbb3ed28a81C667; // CELR
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x58b6A8A3302369DAEc383334672404Ee733aB239". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x58b6A8A3302369DAEc383334672404Ee733aB239". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:573:22:
    |
573 |         tokens[88] = 0x58b6a8A3302369DAEc383334672404Ee733aB239; // LPT
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x85ee38A815c12aEe385ecCD255d478CeE68A28a3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x85ee38A815c12aEe385ecCD255d478CeE68A28a3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:574:22:
    |
574 |         tokens[89] = 0x85Ee38A815c12Aee385eCCd255d478cEE68A28A3; // KEEP
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xFA5047C9C78B8877AF97bdcB85db743F6DF0A6D7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xFA5047C9C78B8877AF97bdcB85db743F6DF0A6D7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:575:22:
    |
575 |         tokens[90] = 0xfA5047c9C78B8877af97BdCB85Db743f6dF0A6d7; // ROOK
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but is not exactly 40 hex digits. It is 39 hex digits. If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:577:22:
    |
577 |         tokens[92] = 0x875773784Af8135eD0D9AABbF8845A57A1296A2; // IDLE
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xF17e65822b568B3903685a7c9F496CF7656Cc6C2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xF17e65822b568B3903685a7c9F496CF7656Cc6C2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:578:22:
    |
578 |         tokens[93] = 0xf17e65822b568b3903685a7c9f496cf7656cc6c2; // BICO
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x03ab458634910AaD20eF5f1C8ee96F1D6ac54919". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x03ab458634910AaD20eF5f1C8ee96F1D6ac54919". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:580:22:
    |
580 |         tokens[95] = 0x03ab458634910AaD20eF5f1C8ee96F1d6ac54919; // RAI
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

